// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable.TableHeader should have an active and ascending class if sorting by ASC 1`] = `
<Table>
  <div
    className="bx--responsive-table-container"
  >
    <table
      className="bx--responsive-table"
      style={
        Object {
          "borderCollapse": "collapse",
          "borderSpacing": 0,
        }
      }
    >
      <TableHead>
        <thead
          className="bx--table-head"
        >
          <TableRow
            header={false}
          >
            <tr
              className="bx--table-row bx--parent-row"
            >
              <TableHeader
                isSortHeader={true}
                onClick={[MockFunction]}
                scope="col"
                sortDirection="ASC"
                translateWithId={[Function]}
              >
                <th
                  scope="col"
                >
                  <button
                    className="bx--table-sort-v2 bx--table-sort-v2--active bx--table-sort-v2--ascending"
                    onClick={[MockFunction]}
                  >
                    <span
                      className="bx--table-header-label"
                    >
                      Header
                    </span>
                    <Icon
                      className="bx--table-sort-v2__icon"
                      description="Sort rows by this header in ascending order"
                      fillRule="evenodd"
                      height="24"
                      name="down"
                      role="img"
                      width="24"
                    >
                      <svg
                        aria-label="Sort rows by this header in ascending order"
                        className="bx--table-sort-v2__icon"
                        fillRule="evenodd"
                        height="24"
                        role="img"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <title>
                          Sort rows by this header in ascending order
                        </title>
                        <path
                          d="M17.3 9.4L12 14.6 6.7 9.4l-.7.7 6 5.9 6-5.9z"
                          key="0"
                        />
                      </svg>
                    </Icon>
                  </button>
                </th>
              </TableHeader>
            </tr>
          </TableRow>
        </thead>
      </TableHead>
    </table>
  </div>
</Table>
`;

exports[`DataTable.TableHeader should have an active class if it is the sort header and the sort state is not NONE 1`] = `
<Table>
  <div
    className="bx--responsive-table-container"
  >
    <table
      className="bx--responsive-table"
      style={
        Object {
          "borderCollapse": "collapse",
          "borderSpacing": 0,
        }
      }
    >
      <TableHead>
        <thead
          className="bx--table-head"
        >
          <TableRow
            header={false}
          >
            <tr
              className="bx--table-row bx--parent-row"
            >
              <TableHeader
                isSortHeader={true}
                onClick={[MockFunction]}
                scope="col"
                sortDirection="NONE"
                translateWithId={[Function]}
              >
                <th
                  scope="col"
                >
                  <button
                    className="bx--table-sort-v2"
                    onClick={[MockFunction]}
                  >
                    <span
                      className="bx--table-header-label"
                    >
                      Header
                    </span>
                    <Icon
                      className="bx--table-sort-v2__icon"
                      description="Sort rows by this header in ascending order"
                      fillRule="evenodd"
                      height="24"
                      name="down"
                      role="img"
                      width="24"
                    >
                      <svg
                        aria-label="Sort rows by this header in ascending order"
                        className="bx--table-sort-v2__icon"
                        fillRule="evenodd"
                        height="24"
                        role="img"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <title>
                          Sort rows by this header in ascending order
                        </title>
                        <path
                          d="M17.3 9.4L12 14.6 6.7 9.4l-.7.7 6 5.9 6-5.9z"
                          key="0"
                        />
                      </svg>
                    </Icon>
                  </button>
                </th>
              </TableHeader>
            </tr>
          </TableRow>
        </thead>
      </TableHead>
    </table>
  </div>
</Table>
`;

exports[`DataTable.TableHeader should render 1`] = `
<Table>
  <div
    className="bx--responsive-table-container"
  >
    <table
      className="bx--responsive-table"
      style={
        Object {
          "borderCollapse": "collapse",
          "borderSpacing": 0,
        }
      }
    >
      <TableHead>
        <thead
          className="bx--table-head"
        >
          <TableRow
            header={false}
          >
            <tr
              className="bx--table-row bx--parent-row"
            >
              <TableHeader
                isSortHeader={false}
                onClick={[MockFunction]}
                scope="col"
                sortDirection="NONE"
                translateWithId={[Function]}
              >
                <th
                  scope="col"
                >
                  <button
                    className="bx--table-sort-v2"
                    onClick={[MockFunction]}
                  >
                    <span
                      className="bx--table-header-label"
                    >
                      Header
                    </span>
                    <Icon
                      className="bx--table-sort-v2__icon"
                      description="Sort rows by this header in descending order"
                      fillRule="evenodd"
                      height="24"
                      name="down"
                      role="img"
                      width="24"
                    >
                      <svg
                        aria-label="Sort rows by this header in descending order"
                        className="bx--table-sort-v2__icon"
                        fillRule="evenodd"
                        height="24"
                        role="img"
                        viewBox="0 0 24 24"
                        width="24"
                      >
                        <title>
                          Sort rows by this header in descending order
                        </title>
                        <path
                          d="M17.3 9.4L12 14.6 6.7 9.4l-.7.7 6 5.9 6-5.9z"
                          key="0"
                        />
                      </svg>
                    </Icon>
                  </button>
                </th>
              </TableHeader>
            </tr>
          </TableRow>
        </thead>
      </TableHead>
    </table>
  </div>
</Table>
`;
